xm/theme/browser/stylesheets/main.css
/* Stylesheet for the 'eXtremeManagement' Plone theme */

h1#project-header {
    border-style: none;
}

h1#project-header a {
    font-weight: bold;
    font-size: 200%;
    color: #436976 !important;
    padding:0.2em 0.5em 1em 1em;
}

#portal-personaltools li dt {
    clear: right;
    float: right;
}

#portal-personaltools a {
    padding:0pt 0.5em;
}

.actionMenu .actionMenuHeader a {
    color:#578308;
    cursor:pointer;
    padding:0pt 0.5em;
    text-decoration:none;
    display:block;
}

/* *** The Global Project tabs. *** */
#project-globalnav {
  background-color: transparent;
  padding: 0em 0em 0em 2em;
  white-space: nowrap;
  list-style: none;
  margin: 0;
  line-height: normal;
}

#project-globalnav li {
  display: inline;
  position: relative;
}

#project-globalnav li a {
  border-color: #8CACBB;
  border-width: 1px;
  border-style: solid solid none solid;
  height: auto;
  margin-right: 0.5em;
  padding: 0em 1.25em;
  text-decoration: none;
  text-transform: &dtml-textTransform;;
}

#project-globalnav li.selected a,
#project-globalnav li a:hover {
  background-color: #DEE7EC;
  border: 1px solid #8CACBB;
  border-bottom: 1px solid #DEE7EC;
}

#portal-globalnav li.plain a {
  background: transparent;
}

/* Start submenu */
.project-submenu {
  position: absolute !important;
  background-color: #DEE7EC;
  border: 1px solid #8CACBB;
  left: 0;
  top: 13px;
  margin: 0;
  padding: 0;
}

.project-submenu li {
  margin: 0 !important;
  padding: 0 !important;
}

.project-submenu li a,
.project-submenu li a:hover {
  margin: 0 !important;
  padding: 2px !important;
  z-index: 40 !important;
  border: none !important;

}

.project-submenu li a {
  background-color: #DEE7EC !important;  
  display: block;
}

.project-submenu li a:hover {
  background-color: #8CACBB !important;  
}

.hide-tab-submenu ul {
  display: none;
}

